2013-10-25  Jérôme Pasquier  <rainbru@free.fr>

	* DEPENDENCIES: newly created with a couple of Boost libraries.

	* configure.in (AC_CONFIG_FILES): add rainbrurpg-services.pc to output.
	* rainbrurpg-services.pc.in: create the input file to generate
	a pkg-config file.

2013-10-11  Jérôme Pasquier  <rainbru@free.fr>

	* configure.in (PKG_CHECK_MODULES): now checks for RainbruRPG's
	logger.

2013-10-09  Jérôme Pasquier  <rainbru@free.fr>

	* src/DependGraph.cpp: can generate a graphiz graph.

2013-10-07  Jérôme Pasquier  <rainbru@free.fr>

	* src/DependParser.hpp (WikiWordParser): finally works correctly.

	* src/DependParser.hpp (DataTimeParser): using qi and multiple
	grammars could work.

	* src/DependParser.hpp (parse_numbers): found a little tutorial
	that can be compiled.

2013-10-06  Jérôme Pasquier  <rainbru@free.fr>

	* src/DependParser.hpp (main): some tests using Boost::spirit::qi.

