@@ -13,6 +13,8 @@ AC_PROG_LIBTOOL
 
 # Checks for libraries.
 PKG_CHECK_MODULES([DEPENDENCIES], [guile-2.0  rainbrurpg-logger])
+RB_CHECK_BOOST_SPIRIT
+RB_CHECK_BOOST_GRAPH
 
 # Checks for header files.
 
